# ndkDemo

./: C++ Primer.md  C++.md  C++学习路线.md  C++实战笔记.md  JNI.md  NDK简介.md  README.md  c++容器.md  crash和unwind.md  oo.txt  tomb_2020-10-10-16-22-10
c++Demo/ch03/: ch45.cpp
c++Demo/ch07/: ex_7_41.cpp  ex_7_41.h
c++Demo/ch08/: ch0813.cpp
c++Demo/ch10/: ch1034.cpp
c++Demo/ch12/: ch1202.cpp  ch1214.cpp  cha1220.cpp  ex12_02.h  exercise12_19.h
c++Demo/ch13/: cha1227.cpp  cha1322.cpp  cha1331.cpp  cha1339.cpp  ex_13_39.h
c++Demo/ch16/: ch1606.cpp  ch1612.cpp
c++Demo/jsonDemo/: leptjson.c  leptjson.h  test.c
cmakeDemo/: CMakeLists.txt  Native.c  main.cpp
jniDemo/: settings.gradle
jniDemo/app/src/main/cpp/: CMakeLists.txt  array-type-operation.cpp  exception_operation.cpp  filed_and_method_operation.cpp  native-lib.cpp  ref_operation.cpp  string-type-operation.cpp  thread_operation.cpp  thread_operation.h
jniDemo/gradle/wrapper/: gradle-wrapper.properties
jsonDemo/: .gitignore
ndkCmakeDemo/: settings.gradle
ndkCmakeDemo/app/: build.gradle
ndkCmakeDemo/app/src/main/: AndroidManifest.xml
ndkCmakeDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndkCmakeDemo/gradle/wrapper/: gradle-wrapper.properties
ndkCrashDemo/: 8661d103-992f-4e39-eb1b8c8c-687e3bc6.dmp  README.md  build.gradle  dmp_result.txt  result.txt  settings.gradle  tombstone_20
ndkCrashDemo/app/: build.gradle
ndkCrashDemo/app/src/main/: AndroidManifest.xml
ndkCrashDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndkCrashDemo/breakpad-build/: build.gradle
ndkCrashDemo/gradle/wrapper/: gradle-wrapper.properties
ndkDemo/: build.gradle  settings.gradle
ndkDemo/app/: build.gradle
ndkDemo/app/src/main/cpp/: CMakeLists.txt  array-type-operation.cpp  bitmap_operation.cpp  commonutil.cpp  commonutil.h  filed_and_method_operation.cpp  logutil.h  native-lib.cpp  string-type-operation.cpp  thread_operation.cpp  thread_operation.h
ndkDemo/sign/: aapt.jks
ndkFileDemo/: settings.gradle
ndkFileDemo/app/: build.gradle
ndkFileDemo/app/src/main/: AndroidManifest.xml
ndkFileDemo/app/src/main/cpp/: CMakeLists.txt  log.h  native-lib.cpp
ndkFileDemo/gradle/wrapper/: gradle-wrapper.properties
ndkSoDemo/: settings.gradle
ndkSoDemo/app/: build.gradle
ndkSoDemo/app/libs/: compress-release.aar
ndkSoDemo/app/src/main/: AndroidManifest.xml
ndkSoDemo/compress/: CMakeLists.txt  build.gradle
ndkSoDemo/compress/src/main/: AndroidManifest.xml
ndkSoDemo/gradle/wrapper/: gradle-wrapper.properties
ninjaDemo/: bar.c  bar.h  foo.c
opusDemo/: settings.gradle
opusDemo/app/: build.gradle
opusDemo/app/src/main/: AndroidManifest.xml
opusDemo/gradle/wrapper/: gradle-wrapper.properties
(+57 files in other folders)
